Setup app again for Heroku

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class = "portrait" src="/img/wizard.jpg">
+        <img class = "portrait" src="/img/wizard.png">
     </div>
     
     {{>footer}}
