--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by Venkatesh Khanna. It uses data from mapbox.com & darksky.net</p>
-        <img class = "portrait" src="/img/wizard.png">
+        <img class = "portrait" src="/img/wizard1.png">
     </div>
     
     {{>footer}}
